--- a/retail-banking-service.yml
+++ b/retail-banking-service.yml
@@ -23,3 +23,13 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5Dialect
     show-sql: true
+    
+    
+   eureka:
+    client:
+      register-with-eureka: true
+      fetch-registry: true
+      service-url:
+        default-zone: http://localhost:8761/eureka/
+    instance:
+    prefer-ip-address: true
